Updated data to 07/21/2021 + vax data (two days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -516,6 +516,8 @@
 <script src=IntData_480.js></script>
 <script src=IntData_481.js></script>
 <script src=IntData_482.js></script>
+<script src=IntData_483.js></script>
+<script src=IntData_484.js></script>
 
 <script>
 
