--- a/covid19reg.html
+++ b/covid19reg.html
@@ -516,6 +516,8 @@
 <script src=RegData_480.js></script>
 <script src=RegData_481.js></script>
 <script src=RegData_482.js></script>
+<script src=RegData_483.js></script>
+<script src=RegData_484.js></script>
 
 <script>
 
