--- a/covid19state.html
+++ b/covid19state.html
@@ -458,6 +458,8 @@
 <script src=USAData_480.js></script>
 <script src=USAData_481.js></script>
 <script src=USAData_482.js></script>
+<script src=USAData_483.js></script>
+<script src=USAData_484.js></script>
 
 <script>
 
