--- a/covid19usa.html
+++ b/covid19usa.html
@@ -481,6 +481,8 @@
 <script src=USAData_480.js></script>
 <script src=USAData_481.js></script>
 <script src=USAData_482.js></script>
+<script src=USAData_483.js></script>
+<script src=USAData_484.js></script>
 
 <script>
 
