Updated data to 07/23/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -518,6 +518,7 @@
 <script src=RegData_482.js></script>
 <script src=RegData_483.js></script>
 <script src=RegData_484.js></script>
+<script src=RegData_485.js></script>
 
 <script>
 
