--- a/covid19usa.html
+++ b/covid19usa.html
@@ -483,6 +483,7 @@
 <script src=USAData_482.js></script>
 <script src=USAData_483.js></script>
 <script src=USAData_484.js></script>
+<script src=USAData_485.js></script>
 
 <script>
 
