--- a/covid19int.html
+++ b/covid19int.html
@@ -518,6 +518,7 @@
 <script src=IntData_482.js></script>
 <script src=IntData_483.js></script>
 <script src=IntData_484.js></script>
+<script src=IntData_485.js></script>
 
 <script>
 
