Updated data to 07/24/2021 + vaxdata (two days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -519,6 +519,8 @@
 <script src=IntData_483.js></script>
 <script src=IntData_484.js></script>
 <script src=IntData_485.js></script>
+<script src=IntData_486.js></script>
+<script src=IntData_487.js></script>
 
 <script>
 
