--- a/covid19reg.html
+++ b/covid19reg.html
@@ -519,6 +519,8 @@
 <script src=RegData_483.js></script>
 <script src=RegData_484.js></script>
 <script src=RegData_485.js></script>
+<script src=RegData_486.js></script>
+<script src=RegData_487.js></script>
 
 <script>
 
