--- a/covid19state.html
+++ b/covid19state.html
@@ -461,6 +461,8 @@
 <script src=USAData_483.js></script>
 <script src=USAData_484.js></script>
 <script src=USAData_485.js></script>
+<script src=USAData_486.js></script>
+<script src=USAData_487.js></script>
 
 <script>
 
