Updated data to 07/25/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -521,6 +521,7 @@
 <script src=IntData_485.js></script>
 <script src=IntData_486.js></script>
 <script src=IntData_487.js></script>
+<script src=IntData_488.js></script>
 
 <script>
 
