--- a/covid19reg.html
+++ b/covid19reg.html
@@ -521,6 +521,7 @@
 <script src=RegData_485.js></script>
 <script src=RegData_486.js></script>
 <script src=RegData_487.js></script>
+<script src=RegData_488.js></script>
 
 <script>
 
