--- a/covid19usa.html
+++ b/covid19usa.html
@@ -486,6 +486,7 @@
 <script src=USAData_485.js></script>
 <script src=USAData_486.js></script>
 <script src=USAData_487.js></script>
+<script src=USAData_488.js></script>
 
 <script>
 
