--- a/covid19int.html
+++ b/covid19int.html
@@ -522,6 +522,7 @@
 <script src=IntData_486.js></script>
 <script src=IntData_487.js></script>
 <script src=IntData_488.js></script>
+<script src=IntData_489.js></script>
 
 <script>
 
