--- a/covid19reg.html
+++ b/covid19reg.html
@@ -522,6 +522,7 @@
 <script src=RegData_486.js></script>
 <script src=RegData_487.js></script>
 <script src=RegData_488.js></script>
+<script src=RegData_489.js></script>
 
 <script>
 
