--- a/covid19usa.html
+++ b/covid19usa.html
@@ -487,6 +487,7 @@
 <script src=USAData_486.js></script>
 <script src=USAData_487.js></script>
 <script src=USAData_488.js></script>
+<script src=USAData_489.js></script>
 
 <script>
 
