Updated data to 07/27/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -523,6 +523,7 @@
 <script src=IntData_487.js></script>
 <script src=IntData_488.js></script>
 <script src=IntData_489.js></script>
+<script src=IntData_490.js></script>
 
 <script>
 
