--- a/covid19usa.html
+++ b/covid19usa.html
@@ -488,6 +488,7 @@
 <script src=USAData_487.js></script>
 <script src=USAData_488.js></script>
 <script src=USAData_489.js></script>
+<script src=USAData_490.js></script>
 
 <script>
 
