--- a/covid19reg.html
+++ b/covid19reg.html
@@ -523,6 +523,7 @@
 <script src=RegData_487.js></script>
 <script src=RegData_488.js></script>
 <script src=RegData_489.js></script>
+<script src=RegData_490.js></script>
 
 <script>
 
