Updated data to 07/28/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -524,6 +524,7 @@
 <script src=RegData_488.js></script>
 <script src=RegData_489.js></script>
 <script src=RegData_490.js></script>
+<script src=RegData_491.js></script>
 
 <script>
 
