--- a/covid19int.html
+++ b/covid19int.html
@@ -524,6 +524,7 @@
 <script src=IntData_488.js></script>
 <script src=IntData_489.js></script>
 <script src=IntData_490.js></script>
+<script src=IntData_491.js></script>
 
 <script>
 
