--- a/covid19state.html
+++ b/covid19state.html
@@ -466,6 +466,7 @@
 <script src=USAData_488.js></script>
 <script src=USAData_489.js></script>
 <script src=USAData_490.js></script>
+<script src=USAData_491.js></script>
 
 <script>
 
