--- a/covid19usa.html
+++ b/covid19usa.html
@@ -489,6 +489,7 @@
 <script src=USAData_488.js></script>
 <script src=USAData_489.js></script>
 <script src=USAData_490.js></script>
+<script src=USAData_491.js></script>
 
 <script>
 
