Updated data to 07/29/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -525,6 +525,7 @@
 <script src=IntData_489.js></script>
 <script src=IntData_490.js></script>
 <script src=IntData_491.js></script>
+<script src=IntData_492.js></script>
 
 <script>
 
