--- a/covid19usa.html
+++ b/covid19usa.html
@@ -490,6 +490,7 @@
 <script src=USAData_489.js></script>
 <script src=USAData_490.js></script>
 <script src=USAData_491.js></script>
+<script src=USAData_492.js></script>
 
 <script>
 
