--- a/covid19reg.html
+++ b/covid19reg.html
@@ -525,6 +525,7 @@
 <script src=RegData_489.js></script>
 <script src=RegData_490.js></script>
 <script src=RegData_491.js></script>
+<script src=RegData_492.js></script>
 
 <script>
 
