--- a/covid19int.html
+++ b/covid19int.html
@@ -526,6 +526,7 @@
 <script src=IntData_490.js></script>
 <script src=IntData_491.js></script>
 <script src=IntData_492.js></script>
+<script src=IntData_493.js></script>
 
 <script>
 
