--- a/covid19reg.html
+++ b/covid19reg.html
@@ -526,6 +526,7 @@
 <script src=RegData_490.js></script>
 <script src=RegData_491.js></script>
 <script src=RegData_492.js></script>
+<script src=RegData_493.js></script>
 
 <script>
 
