--- a/covid19usa.html
+++ b/covid19usa.html
@@ -491,6 +491,7 @@
 <script src=USAData_490.js></script>
 <script src=USAData_491.js></script>
 <script src=USAData_492.js></script>
+<script src=USAData_493.js></script>
 
 <script>
 
