Updated data to 07/31/2021 + Vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -527,6 +527,7 @@
 <script src=IntData_491.js></script>
 <script src=IntData_492.js></script>
 <script src=IntData_493.js></script>
+<script src=IntData_494.js></script>
 
 <script>
 
