--- a/covid19reg.html
+++ b/covid19reg.html
@@ -527,6 +527,7 @@
 <script src=RegData_491.js></script>
 <script src=RegData_492.js></script>
 <script src=RegData_493.js></script>
+<script src=RegData_494.js></script>
 
 <script>
 
