--- a/covid19state.html
+++ b/covid19state.html
@@ -469,6 +469,7 @@
 <script src=USAData_491.js></script>
 <script src=USAData_492.js></script>
 <script src=USAData_493.js></script>
+<script src=USAData_494.js></script>
 
 <script>
 
