Updated data to 8/1/2021

--- a/covid19int.html
+++ b/covid19int.html
@@ -528,6 +528,7 @@
 <script src=IntData_492.js></script>
 <script src=IntData_493.js></script>
 <script src=IntData_494.js></script>
+<script src=IntData_495.js></script>
 
 <script>
 
