--- a/covid19state.html
+++ b/covid19state.html
@@ -470,6 +470,7 @@
 <script src=USAData_492.js></script>
 <script src=USAData_493.js></script>
 <script src=USAData_494.js></script>
+<script src=USAData_495.js></script>
 
 <script>
 
