--- a/covid19reg.html
+++ b/covid19reg.html
@@ -528,6 +528,7 @@
 <script src=RegData_492.js></script>
 <script src=RegData_493.js></script>
 <script src=RegData_494.js></script>
+<script src=RegData_495.js></script>
 
 <script>
 
