Updated data to 08/02/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -529,6 +529,7 @@
 <script src=IntData_493.js></script>
 <script src=IntData_494.js></script>
 <script src=IntData_495.js></script>
+<script src=IntData_496.js></script>
 
 <script>
 
