--- a/covid19reg.html
+++ b/covid19reg.html
@@ -529,6 +529,7 @@
 <script src=RegData_493.js></script>
 <script src=RegData_494.js></script>
 <script src=RegData_495.js></script>
+<script src=RegData_496.js></script>
 
 <script>
 
