--- a/covid19state.html
+++ b/covid19state.html
@@ -471,6 +471,7 @@
 <script src=USAData_493.js></script>
 <script src=USAData_494.js></script>
 <script src=USAData_495.js></script>
+<script src=USAData_496.js></script>
 
 <script>
 
