--- a/covid19int.html
+++ b/covid19int.html
@@ -530,6 +530,7 @@
 <script src=IntData_494.js></script>
 <script src=IntData_495.js></script>
 <script src=IntData_496.js></script>
+<script src=IntData_497.js></script>
 
 <script>
 
