--- a/covid19reg.html
+++ b/covid19reg.html
@@ -530,6 +530,7 @@
 <script src=RegData_494.js></script>
 <script src=RegData_495.js></script>
 <script src=RegData_496.js></script>
+<script src=RegData_497.js></script>
 
 <script>
 
