--- a/covid19state.html
+++ b/covid19state.html
@@ -472,6 +472,7 @@
 <script src=USAData_494.js></script>
 <script src=USAData_495.js></script>
 <script src=USAData_496.js></script>
+<script src=USAData_497.js></script>
 
 <script>
 
