--- a/covid19usa.html
+++ b/covid19usa.html
@@ -495,6 +495,7 @@
 <script src=USAData_494.js></script>
 <script src=USAData_495.js></script>
 <script src=USAData_496.js></script>
+<script src=USAData_497.js></script>
 
 <script>
 
