Updated data to 08/04/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -531,6 +531,7 @@
 <script src=RegData_495.js></script>
 <script src=RegData_496.js></script>
 <script src=RegData_497.js></script>
+<script src=RegData_498.js></script>
 
 <script>
 
