--- a/covid19int.html
+++ b/covid19int.html
@@ -531,6 +531,7 @@
 <script src=IntData_495.js></script>
 <script src=IntData_496.js></script>
 <script src=IntData_497.js></script>
+<script src=IntData_498.js></script>
 
 <script>
 
