--- a/covid19state.html
+++ b/covid19state.html
@@ -473,6 +473,7 @@
 <script src=USAData_495.js></script>
 <script src=USAData_496.js></script>
 <script src=USAData_497.js></script>
+<script src=USAData_498.js></script>
 
 <script>
 
