Updated data to 08/05/2021 + vaxdata

--- a/covid19state.html
+++ b/covid19state.html
@@ -474,6 +474,7 @@
 <script src=USAData_496.js></script>
 <script src=USAData_497.js></script>
 <script src=USAData_498.js></script>
+<script src=USAData_499.js></script>
 
 <script>
 
