--- a/covid19int.html
+++ b/covid19int.html
@@ -532,6 +532,7 @@
 <script src=IntData_496.js></script>
 <script src=IntData_497.js></script>
 <script src=IntData_498.js></script>
+<script src=IntData_499.js></script>
 
 <script>
 
