--- a/covid19reg.html
+++ b/covid19reg.html
@@ -532,6 +532,7 @@
 <script src=RegData_496.js></script>
 <script src=RegData_497.js></script>
 <script src=RegData_498.js></script>
+<script src=RegData_499.js></script>
 
 <script>
 
