--- a/covid19usa.html
+++ b/covid19usa.html
@@ -497,6 +497,7 @@
 <script src=USAData_496.js></script>
 <script src=USAData_497.js></script>
 <script src=USAData_498.js></script>
+<script src=USAData_499.js></script>
 
 <script>
 
