Updated data to 08/06/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -533,6 +533,7 @@
 <script src=RegData_497.js></script>
 <script src=RegData_498.js></script>
 <script src=RegData_499.js></script>
+<script src=RegData_500.js></script>
 
 <script>
 
