--- a/covid19int.html
+++ b/covid19int.html
@@ -533,6 +533,7 @@
 <script src=IntData_497.js></script>
 <script src=IntData_498.js></script>
 <script src=IntData_499.js></script>
+<script src=IntData_500.js></script>
 
 <script>
 
