--- a/covid19state.html
+++ b/covid19state.html
@@ -475,6 +475,7 @@
 <script src=USAData_497.js></script>
 <script src=USAData_498.js></script>
 <script src=USAData_499.js></script>
+<script src=USAData_500.js></script>
 
 <script>
 
