--- a/covid19usa.html
+++ b/covid19usa.html
@@ -498,6 +498,7 @@
 <script src=USAData_497.js></script>
 <script src=USAData_498.js></script>
 <script src=USAData_499.js></script>
+<script src=USAData_500.js></script>
 
 <script>
 
