Updated data to 08/07/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -534,6 +534,7 @@
 <script src=IntData_498.js></script>
 <script src=IntData_499.js></script>
 <script src=IntData_500.js></script>
+<script src=IntData_501.js></script>
 
 <script>
 
