--- a/covid19usa.html
+++ b/covid19usa.html
@@ -499,6 +499,7 @@
 <script src=USAData_498.js></script>
 <script src=USAData_499.js></script>
 <script src=USAData_500.js></script>
+<script src=USAData_501.js></script>
 
 <script>
 
