--- a/covid19reg.html
+++ b/covid19reg.html
@@ -534,6 +534,7 @@
 <script src=RegData_498.js></script>
 <script src=RegData_499.js></script>
 <script src=RegData_500.js></script>
+<script src=RegData_501.js></script>
 
 <script>
 
