Updated data to 08/08/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -535,6 +535,7 @@
 <script src=RegData_499.js></script>
 <script src=RegData_500.js></script>
 <script src=RegData_501.js></script>
+<script src=RegData_502.js></script>
 
 <script>
 
