--- a/covid19usa.html
+++ b/covid19usa.html
@@ -500,6 +500,7 @@
 <script src=USAData_499.js></script>
 <script src=USAData_500.js></script>
 <script src=USAData_501.js></script>
+<script src=USAData_502.js></script>
 
 <script>
 
