--- a/covid19int.html
+++ b/covid19int.html
@@ -535,6 +535,7 @@
 <script src=IntData_499.js></script>
 <script src=IntData_500.js></script>
 <script src=IntData_501.js></script>
+<script src=IntData_502.js></script>
 
 <script>
 
