Updated data to 08/10/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -536,6 +536,8 @@
 <script src=IntData_500.js></script>
 <script src=IntData_501.js></script>
 <script src=IntData_502.js></script>
+<script src=IntData_503.js></script>
+<script src=IntData_504.js></script>
 
 <script>
 
