--- a/covid19reg.html
+++ b/covid19reg.html
@@ -536,6 +536,8 @@
 <script src=RegData_500.js></script>
 <script src=RegData_501.js></script>
 <script src=RegData_502.js></script>
+<script src=RegData_503.js></script>
+<script src=RegData_504.js></script>
 
 <script>
 
