--- a/covid19usa.html
+++ b/covid19usa.html
@@ -501,6 +501,8 @@
 <script src=USAData_500.js></script>
 <script src=USAData_501.js></script>
 <script src=USAData_502.js></script>
+<script src=USAData_503.js></script>
+<script src=USAData_504.js></script>
 
 <script>
 
