Updated data to 08/11/2021 + Vax data

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -538,6 +538,7 @@
 <script src=RegData_502.js></script>
 <script src=RegData_503.js></script>
 <script src=RegData_504.js></script>
+<script src=RegData_505.js></script>
 
 <script>
 
