--- a/covid19state.html
+++ b/covid19state.html
@@ -480,6 +480,7 @@
 <script src=USAData_502.js></script>
 <script src=USAData_503.js></script>
 <script src=USAData_504.js></script>
+<script src=USAData_505.js></script>
 
 <script>
 
