--- a/covid19int.html
+++ b/covid19int.html
@@ -538,6 +538,7 @@
 <script src=IntData_502.js></script>
 <script src=IntData_503.js></script>
 <script src=IntData_504.js></script>
+<script src=IntData_505.js></script>
 
 <script>
 
