--- a/covid19usa.html
+++ b/covid19usa.html
@@ -503,6 +503,7 @@
 <script src=USAData_502.js></script>
 <script src=USAData_503.js></script>
 <script src=USAData_504.js></script>
+<script src=USAData_505.js></script>
 
 <script>
 
