Updated data to 08/12/2021 + vaxdata (which has added booster information for non US entities now)

--- a/covid19int.html
+++ b/covid19int.html
@@ -539,6 +539,7 @@
 <script src=IntData_503.js></script>
 <script src=IntData_504.js></script>
 <script src=IntData_505.js></script>
+<script src=IntData_506.js></script>
 
 <script>
 
