--- a/covid19reg.html
+++ b/covid19reg.html
@@ -539,6 +539,7 @@
 <script src=RegData_503.js></script>
 <script src=RegData_504.js></script>
 <script src=RegData_505.js></script>
+<script src=RegData_506.js></script>
 
 <script>
 
