--- a/covid19usa.html
+++ b/covid19usa.html
@@ -504,6 +504,7 @@
 <script src=USAData_503.js></script>
 <script src=USAData_504.js></script>
 <script src=USAData_505.js></script>
+<script src=USAData_506.js></script>
 
 <script>
 
