--- a/covid19state.html
+++ b/covid19state.html
@@ -481,6 +481,7 @@
 <script src=USAData_503.js></script>
 <script src=USAData_504.js></script>
 <script src=USAData_505.js></script>
+<script src=USAData_506.js></script>
 
 <script>
 
