Updated data to 08/13/2021 + vaxdata

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -505,6 +505,7 @@
 <script src=USAData_504.js></script>
 <script src=USAData_505.js></script>
 <script src=USAData_506.js></script>
+<script src=USAData_507.js></script>
 
 <script>
 
