--- a/covid19int.html
+++ b/covid19int.html
@@ -540,6 +540,7 @@
 <script src=IntData_504.js></script>
 <script src=IntData_505.js></script>
 <script src=IntData_506.js></script>
+<script src=IntData_507.js></script>
 
 <script>
 
