--- a/covid19reg.html
+++ b/covid19reg.html
@@ -540,6 +540,7 @@
 <script src=RegData_504.js></script>
 <script src=RegData_505.js></script>
 <script src=RegData_506.js></script>
+<script src=RegData_507.js></script>
 
 <script>
 
