--- a/covid19state.html
+++ b/covid19state.html
@@ -482,6 +482,7 @@
 <script src=USAData_504.js></script>
 <script src=USAData_505.js></script>
 <script src=USAData_506.js></script>
+<script src=USAData_507.js></script>
 
 <script>
 
