Updated data to 08/14/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -541,6 +541,7 @@
 <script src=RegData_505.js></script>
 <script src=RegData_506.js></script>
 <script src=RegData_507.js></script>
+<script src=RegData_508.js></script>
 
 <script>
 
