--- a/covid19int.html
+++ b/covid19int.html
@@ -541,6 +541,7 @@
 <script src=IntData_505.js></script>
 <script src=IntData_506.js></script>
 <script src=IntData_507.js></script>
+<script src=IntData_508.js></script>
 
 <script>
 
