--- a/covid19usa.html
+++ b/covid19usa.html
@@ -506,6 +506,7 @@
 <script src=USAData_505.js></script>
 <script src=USAData_506.js></script>
 <script src=USAData_507.js></script>
+<script src=USAData_508.js></script>
 
 <script>
 
