Updated data to 08/15/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -542,6 +542,7 @@
 <script src=IntData_506.js></script>
 <script src=IntData_507.js></script>
 <script src=IntData_508.js></script>
+<script src=IntData_509.js></script>
 
 <script>
 
