--- a/covid19reg.html
+++ b/covid19reg.html
@@ -542,6 +542,7 @@
 <script src=RegData_506.js></script>
 <script src=RegData_507.js></script>
 <script src=RegData_508.js></script>
+<script src=RegData_509.js></script>
 
 <script>
 
