--- a/covid19usa.html
+++ b/covid19usa.html
@@ -507,6 +507,7 @@
 <script src=USAData_506.js></script>
 <script src=USAData_507.js></script>
 <script src=USAData_508.js></script>
+<script src=USAData_509.js></script>
 
 <script>
 
