Updated data to 08/16/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -543,6 +543,7 @@
 <script src=RegData_507.js></script>
 <script src=RegData_508.js></script>
 <script src=RegData_509.js></script>
+<script src=RegData_510.js></script>
 
 <script>
 
