--- a/covid19usa.html
+++ b/covid19usa.html
@@ -508,6 +508,7 @@
 <script src=USAData_507.js></script>
 <script src=USAData_508.js></script>
 <script src=USAData_509.js></script>
+<script src=USAData_510.js></script>
 
 <script>
 
