--- a/covid19int.html
+++ b/covid19int.html
@@ -543,6 +543,7 @@
 <script src=IntData_507.js></script>
 <script src=IntData_508.js></script>
 <script src=IntData_509.js></script>
+<script src=IntData_510.js></script>
 
 <script>
 
