--- a/covid19state.html
+++ b/covid19state.html
@@ -485,6 +485,7 @@
 <script src=USAData_507.js></script>
 <script src=USAData_508.js></script>
 <script src=USAData_509.js></script>
+<script src=USAData_510.js></script>
 
 <script>
 
