Updated data to 08/17/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -544,6 +544,7 @@
 <script src=IntData_508.js></script>
 <script src=IntData_509.js></script>
 <script src=IntData_510.js></script>
+<script src=IntData_511.js></script>
 
 <script>
 
