--- a/covid19reg.html
+++ b/covid19reg.html
@@ -544,6 +544,7 @@
 <script src=RegData_508.js></script>
 <script src=RegData_509.js></script>
 <script src=RegData_510.js></script>
+<script src=RegData_511.js></script>
 
 <script>
 
