--- a/covid19state.html
+++ b/covid19state.html
@@ -486,6 +486,7 @@
 <script src=USAData_508.js></script>
 <script src=USAData_509.js></script>
 <script src=USAData_510.js></script>
+<script src=USAData_511.js></script>
 
 <script>
 
