--- a/covid19usa.html
+++ b/covid19usa.html
@@ -509,6 +509,7 @@
 <script src=USAData_508.js></script>
 <script src=USAData_509.js></script>
 <script src=USAData_510.js></script>
+<script src=USAData_511.js></script>
 
 <script>
 
