Updated data to 08/18/2021 + vaxdata

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -510,6 +510,7 @@
 <script src=USAData_509.js></script>
 <script src=USAData_510.js></script>
 <script src=USAData_511.js></script>
+<script src=USAData_512.js></script>
 
 <script>
 
