--- a/covid19int.html
+++ b/covid19int.html
@@ -545,6 +545,7 @@
 <script src=IntData_509.js></script>
 <script src=IntData_510.js></script>
 <script src=IntData_511.js></script>
+<script src=IntData_512.js></script>
 
 <script>
 
