--- a/covid19reg.html
+++ b/covid19reg.html
@@ -545,6 +545,7 @@
 <script src=RegData_509.js></script>
 <script src=RegData_510.js></script>
 <script src=RegData_511.js></script>
+<script src=RegData_512.js></script>
 
 <script>
 
