Updated data to 08/19/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -546,6 +546,7 @@
 <script src=RegData_510.js></script>
 <script src=RegData_511.js></script>
 <script src=RegData_512.js></script>
+<script src=RegData_513.js></script>
 
 <script>
 
