--- a/covid19usa.html
+++ b/covid19usa.html
@@ -511,6 +511,7 @@
 <script src=USAData_510.js></script>
 <script src=USAData_511.js></script>
 <script src=USAData_512.js></script>
+<script src=USAData_513.js></script>
 
 <script>
 
