Updated data to 08/20/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -547,6 +547,7 @@
 <script src=IntData_511.js></script>
 <script src=IntData_512.js></script>
 <script src=IntData_513.js></script>
+<script src=IntData_514.js></script>
 
 <script>
 
