--- a/covid19usa.html
+++ b/covid19usa.html
@@ -512,6 +512,7 @@
 <script src=USAData_511.js></script>
 <script src=USAData_512.js></script>
 <script src=USAData_513.js></script>
+<script src=USAData_514.js></script>
 
 <script>
 
