--- a/covid19reg.html
+++ b/covid19reg.html
@@ -547,6 +547,7 @@
 <script src=RegData_511.js></script>
 <script src=RegData_512.js></script>
 <script src=RegData_513.js></script>
+<script src=RegData_514.js></script>
 
 <script>
 
