Updated data to 08/21/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -548,6 +548,7 @@
 <script src=RegData_512.js></script>
 <script src=RegData_513.js></script>
 <script src=RegData_514.js></script>
+<script src=RegData_515.js></script>
 
 <script>
 
