--- a/covid19int.html
+++ b/covid19int.html
@@ -548,6 +548,7 @@
 <script src=IntData_512.js></script>
 <script src=IntData_513.js></script>
 <script src=IntData_514.js></script>
+<script src=IntData_515.js></script>
 
 <script>
 
