--- a/covid19state.html
+++ b/covid19state.html
@@ -490,6 +490,7 @@
 <script src=USAData_512.js></script>
 <script src=USAData_513.js></script>
 <script src=USAData_514.js></script>
+<script src=USAData_515.js></script>
 
 <script>
 
