--- a/covid19usa.html
+++ b/covid19usa.html
@@ -513,6 +513,7 @@
 <script src=USAData_512.js></script>
 <script src=USAData_513.js></script>
 <script src=USAData_514.js></script>
+<script src=USAData_515.js></script>
 
 <script>
 
