Updated data to 08/22/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -549,6 +549,7 @@
 <script src=RegData_513.js></script>
 <script src=RegData_514.js></script>
 <script src=RegData_515.js></script>
+<script src=RegData_516.js></script>
 
 <script>
 
