--- a/covid19int.html
+++ b/covid19int.html
@@ -549,6 +549,7 @@
 <script src=IntData_513.js></script>
 <script src=IntData_514.js></script>
 <script src=IntData_515.js></script>
+<script src=IntData_516.js></script>
 
 <script>
 
