--- a/covid19state.html
+++ b/covid19state.html
@@ -491,6 +491,7 @@
 <script src=USAData_513.js></script>
 <script src=USAData_514.js></script>
 <script src=USAData_515.js></script>
+<script src=USAData_516.js></script>
 
 <script>
 
