--- a/covid19usa.html
+++ b/covid19usa.html
@@ -514,6 +514,7 @@
 <script src=USAData_513.js></script>
 <script src=USAData_514.js></script>
 <script src=USAData_515.js></script>
+<script src=USAData_516.js></script>
 
 <script>
 
