Updated data to 08/23/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -550,6 +550,7 @@
 <script src=IntData_514.js></script>
 <script src=IntData_515.js></script>
 <script src=IntData_516.js></script>
+<script src=IntData_517.js></script>
 
 <script>
 
