--- a/covid19reg.html
+++ b/covid19reg.html
@@ -550,6 +550,7 @@
 <script src=RegData_514.js></script>
 <script src=RegData_515.js></script>
 <script src=RegData_516.js></script>
+<script src=RegData_517.js></script>
 
 <script>
 
