--- a/covid19usa.html
+++ b/covid19usa.html
@@ -515,6 +515,7 @@
 <script src=USAData_514.js></script>
 <script src=USAData_515.js></script>
 <script src=USAData_516.js></script>
+<script src=USAData_517.js></script>
 
 <script>
 
