--- a/covid19reg.html
+++ b/covid19reg.html
@@ -551,6 +551,7 @@
 <script src=RegData_515.js></script>
 <script src=RegData_516.js></script>
 <script src=RegData_517.js></script>
+<script src=RegData_518.js></script>
 
 <script>
 
