--- a/covid19usa.html
+++ b/covid19usa.html
@@ -516,6 +516,7 @@
 <script src=USAData_515.js></script>
 <script src=USAData_516.js></script>
 <script src=USAData_517.js></script>
+<script src=USAData_518.js></script>
 
 <script>
 
