Updated data to 08/25/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -552,6 +552,7 @@
 <script src=IntData_516.js></script>
 <script src=IntData_517.js></script>
 <script src=IntData_518.js></script>
+<script src=IntData_519.js></script>
 
 <script>
 
