--- a/covid19reg.html
+++ b/covid19reg.html
@@ -552,6 +552,7 @@
 <script src=RegData_516.js></script>
 <script src=RegData_517.js></script>
 <script src=RegData_518.js></script>
+<script src=RegData_519.js></script>
 
 <script>
 
