--- a/covid19state.html
+++ b/covid19state.html
@@ -494,6 +494,7 @@
 <script src=USAData_516.js></script>
 <script src=USAData_517.js></script>
 <script src=USAData_518.js></script>
+<script src=USAData_519.js></script>
 
 <script>
 
