Updated data to 08/26/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -553,6 +553,7 @@
 <script src=RegData_517.js></script>
 <script src=RegData_518.js></script>
 <script src=RegData_519.js></script>
+<script src=RegData_520.js></script>
 
 <script>
 
