--- a/covid19int.html
+++ b/covid19int.html
@@ -553,6 +553,7 @@
 <script src=IntData_517.js></script>
 <script src=IntData_518.js></script>
 <script src=IntData_519.js></script>
+<script src=IntData_520.js></script>
 
 <script>
 
