--- a/covid19usa.html
+++ b/covid19usa.html
@@ -518,6 +518,7 @@
 <script src=USAData_517.js></script>
 <script src=USAData_518.js></script>
 <script src=USAData_519.js></script>
+<script src=USAData_520.js></script>
 
 <script>
 
