Updated to 08/27/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -554,6 +554,7 @@
 <script src=IntData_518.js></script>
 <script src=IntData_519.js></script>
 <script src=IntData_520.js></script>
+<script src=IntData_521.js></script>
 
 <script>
 
