--- a/covid19reg.html
+++ b/covid19reg.html
@@ -554,6 +554,7 @@
 <script src=RegData_518.js></script>
 <script src=RegData_519.js></script>
 <script src=RegData_520.js></script>
+<script src=RegData_521.js></script>
 
 <script>
 
