--- a/covid19state.html
+++ b/covid19state.html
@@ -496,6 +496,7 @@
 <script src=USAData_518.js></script>
 <script src=USAData_519.js></script>
 <script src=USAData_520.js></script>
+<script src=USAData_521.js></script>
 
 <script>
 
