--- a/covid19usa.html
+++ b/covid19usa.html
@@ -519,6 +519,7 @@
 <script src=USAData_518.js></script>
 <script src=USAData_519.js></script>
 <script src=USAData_520.js></script>
+<script src=USAData_521.js></script>
 
 <script>
 
