Updated data to 08/28/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -555,6 +555,7 @@
 <script src=RegData_519.js></script>
 <script src=RegData_520.js></script>
 <script src=RegData_521.js></script>
+<script src=RegData_522.js></script>
 
 <script>
 
