--- a/covid19int.html
+++ b/covid19int.html
@@ -555,6 +555,7 @@
 <script src=IntData_519.js></script>
 <script src=IntData_520.js></script>
 <script src=IntData_521.js></script>
+<script src=IntData_522.js></script>
 
 <script>
 
