--- a/covid19state.html
+++ b/covid19state.html
@@ -497,6 +497,7 @@
 <script src=USAData_519.js></script>
 <script src=USAData_520.js></script>
 <script src=USAData_521.js></script>
+<script src=USAData_522.js></script>
 
 <script>
 
