--- a/covid19usa.html
+++ b/covid19usa.html
@@ -520,6 +520,7 @@
 <script src=USAData_519.js></script>
 <script src=USAData_520.js></script>
 <script src=USAData_521.js></script>
+<script src=USAData_522.js></script>
 
 <script>
 
