Updated data to 08/29/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -556,6 +556,7 @@
 <script src=IntData_520.js></script>
 <script src=IntData_521.js></script>
 <script src=IntData_522.js></script>
+<script src=IntData_523.js></script>
 
 <script>
 
