--- a/covid19reg.html
+++ b/covid19reg.html
@@ -556,6 +556,7 @@
 <script src=RegData_520.js></script>
 <script src=RegData_521.js></script>
 <script src=RegData_522.js></script>
+<script src=RegData_523.js></script>
 
 <script>
 
