--- a/covid19state.html
+++ b/covid19state.html
@@ -498,6 +498,7 @@
 <script src=USAData_520.js></script>
 <script src=USAData_521.js></script>
 <script src=USAData_522.js></script>
+<script src=USAData_523.js></script>
 
 <script>
 
