--- a/covid19usa.html
+++ b/covid19usa.html
@@ -521,6 +521,7 @@
 <script src=USAData_520.js></script>
 <script src=USAData_521.js></script>
 <script src=USAData_522.js></script>
+<script src=USAData_523.js></script>
 
 <script>
 
