Updated data to 08/30/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -557,6 +557,7 @@
 <script src=IntData_521.js></script>
 <script src=IntData_522.js></script>
 <script src=IntData_523.js></script>
+<script src=IntData_524.js></script>
 
 <script>
 
