--- a/covid19state.html
+++ b/covid19state.html
@@ -499,6 +499,7 @@
 <script src=USAData_521.js></script>
 <script src=USAData_522.js></script>
 <script src=USAData_523.js></script>
+<script src=USAData_524.js></script>
 
 <script>
 
