--- a/covid19usa.html
+++ b/covid19usa.html
@@ -522,6 +522,7 @@
 <script src=USAData_521.js></script>
 <script src=USAData_522.js></script>
 <script src=USAData_523.js></script>
+<script src=USAData_524.js></script>
 
 <script>
 
