Updated data to 08/31/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -558,6 +558,7 @@
 <script src=IntData_522.js></script>
 <script src=IntData_523.js></script>
 <script src=IntData_524.js></script>
+<script src=IntData_525.js></script>
 
 <script>
 
