--- a/covid19reg.html
+++ b/covid19reg.html
@@ -558,6 +558,7 @@
 <script src=RegData_522.js></script>
 <script src=RegData_523.js></script>
 <script src=RegData_524.js></script>
+<script src=RegData_525.js></script>
 
 <script>
 
