--- a/covid19usa.html
+++ b/covid19usa.html
@@ -523,6 +523,7 @@
 <script src=USAData_522.js></script>
 <script src=USAData_523.js></script>
 <script src=USAData_524.js></script>
+<script src=USAData_525.js></script>
 
 <script>
 
