--- a/covid19int.html
+++ b/covid19int.html
@@ -559,6 +559,7 @@
 <script src=IntData_523.js></script>
 <script src=IntData_524.js></script>
 <script src=IntData_525.js></script>
+<script src=IntData_526.js></script>
 
 <script>
 
