--- a/covid19reg.html
+++ b/covid19reg.html
@@ -559,6 +559,7 @@
 <script src=RegData_523.js></script>
 <script src=RegData_524.js></script>
 <script src=RegData_525.js></script>
+<script src=RegData_526.js></script>
 
 <script>
 
