--- a/covid19state.html
+++ b/covid19state.html
@@ -501,6 +501,7 @@
 <script src=USAData_523.js></script>
 <script src=USAData_524.js></script>
 <script src=USAData_525.js></script>
+<script src=USAData_526.js></script>
 
 <script>
 
