Updated data to 09/02/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -560,6 +560,7 @@
 <script src=IntData_524.js></script>
 <script src=IntData_525.js></script>
 <script src=IntData_526.js></script>
+<script src=IntData_527.js></script>
 
 <script>
 
