--- a/covid19reg.html
+++ b/covid19reg.html
@@ -560,6 +560,7 @@
 <script src=RegData_524.js></script>
 <script src=RegData_525.js></script>
 <script src=RegData_526.js></script>
+<script src=RegData_527.js></script>
 
 <script>
 
