--- a/covid19state.html
+++ b/covid19state.html
@@ -502,6 +502,7 @@
 <script src=USAData_524.js></script>
 <script src=USAData_525.js></script>
 <script src=USAData_526.js></script>
+<script src=USAData_527.js></script>
 
 <script>
 
