--- a/covid19usa.html
+++ b/covid19usa.html
@@ -525,6 +525,7 @@
 <script src=USAData_524.js></script>
 <script src=USAData_525.js></script>
 <script src=USAData_526.js></script>
+<script src=USAData_527.js></script>
 
 <script>
 
