Updated data to 09/03/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -561,6 +561,7 @@
 <script src=RegData_525.js></script>
 <script src=RegData_526.js></script>
 <script src=RegData_527.js></script>
+<script src=RegData_528.js></script>
 
 <script>
 
