--- a/covid19usa.html
+++ b/covid19usa.html
@@ -526,6 +526,7 @@
 <script src=USAData_525.js></script>
 <script src=USAData_526.js></script>
 <script src=USAData_527.js></script>
+<script src=USAData_528.js></script>
 
 <script>
 
