--- a/covid19int.html
+++ b/covid19int.html
@@ -561,6 +561,7 @@
 <script src=IntData_525.js></script>
 <script src=IntData_526.js></script>
 <script src=IntData_527.js></script>
+<script src=IntData_528.js></script>
 
 <script>
 
