Updated data to 09/04/2021 + vaxdata

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -527,6 +527,7 @@
 <script src=USAData_526.js></script>
 <script src=USAData_527.js></script>
 <script src=USAData_528.js></script>
+<script src=USAData_529.js></script>
 
 <script>
 
