--- a/covid19int.html
+++ b/covid19int.html
@@ -562,6 +562,7 @@
 <script src=IntData_526.js></script>
 <script src=IntData_527.js></script>
 <script src=IntData_528.js></script>
+<script src=IntData_529.js></script>
 
 <script>
 
