--- a/covid19reg.html
+++ b/covid19reg.html
@@ -562,6 +562,7 @@
 <script src=RegData_526.js></script>
 <script src=RegData_527.js></script>
 <script src=RegData_528.js></script>
+<script src=RegData_529.js></script>
 
 <script>
 
