--- a/covid19state.html
+++ b/covid19state.html
@@ -504,6 +504,7 @@
 <script src=USAData_526.js></script>
 <script src=USAData_527.js></script>
 <script src=USAData_528.js></script>
+<script src=USAData_529.js></script>
 
 <script>
 
