--- a/covid19int.html
+++ b/covid19int.html
@@ -563,6 +563,7 @@
 <script src=IntData_527.js></script>
 <script src=IntData_528.js></script>
 <script src=IntData_529.js></script>
+<script src=IntData_530.js></script>
 
 <script>
 
