--- a/covid19reg.html
+++ b/covid19reg.html
@@ -563,6 +563,7 @@
 <script src=RegData_527.js></script>
 <script src=RegData_528.js></script>
 <script src=RegData_529.js></script>
+<script src=RegData_530.js></script>
 
 <script>
 
