--- a/covid19state.html
+++ b/covid19state.html
@@ -505,6 +505,7 @@
 <script src=USAData_527.js></script>
 <script src=USAData_528.js></script>
 <script src=USAData_529.js></script>
+<script src=USAData_530.js></script>
 
 <script>
 
