--- a/covid19usa.html
+++ b/covid19usa.html
@@ -528,6 +528,7 @@
 <script src=USAData_527.js></script>
 <script src=USAData_528.js></script>
 <script src=USAData_529.js></script>
+<script src=USAData_530.js></script>
 
 <script>
 
