Updated data to 09/08/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -564,6 +564,7 @@
 <script src=RegData_528.js></script>
 <script src=RegData_529.js></script>
 <script src=RegData_530.js></script>
+<script src=RegData_531.js></script>
 
 <script>
 
