--- a/covid19usa.html
+++ b/covid19usa.html
@@ -529,6 +529,7 @@
 <script src=USAData_528.js></script>
 <script src=USAData_529.js></script>
 <script src=USAData_530.js></script>
+<script src=USAData_531.js></script>
 
 <script>
 
