--- a/covid19int.html
+++ b/covid19int.html
@@ -564,6 +564,7 @@
 <script src=IntData_528.js></script>
 <script src=IntData_529.js></script>
 <script src=IntData_530.js></script>
+<script src=IntData_531.js></script>
 
 <script>
 
