--- a/covid19state.html
+++ b/covid19state.html
@@ -506,6 +506,7 @@
 <script src=USAData_528.js></script>
 <script src=USAData_529.js></script>
 <script src=USAData_530.js></script>
+<script src=USAData_531.js></script>
 
 <script>
 
