Updated data to 09/07/2021 + vaxdata (yesterday had wrong date)

--- a/covid19int.html
+++ b/covid19int.html
@@ -565,6 +565,7 @@
 <script src=IntData_529.js></script>
 <script src=IntData_530.js></script>
 <script src=IntData_531.js></script>
+<script src=IntData_532.js></script>
 
 <script>
 
