--- a/covid19reg.html
+++ b/covid19reg.html
@@ -565,6 +565,7 @@
 <script src=RegData_529.js></script>
 <script src=RegData_530.js></script>
 <script src=RegData_531.js></script>
+<script src=RegData_532.js></script>
 
 <script>
 
