--- a/covid19state.html
+++ b/covid19state.html
@@ -507,6 +507,7 @@
 <script src=USAData_529.js></script>
 <script src=USAData_530.js></script>
 <script src=USAData_531.js></script>
+<script src=USAData_532.js></script>
 
 <script>
 
