Updated data to 09/08/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -566,6 +566,7 @@
 <script src=RegData_530.js></script>
 <script src=RegData_531.js></script>
 <script src=RegData_532.js></script>
+<script src=RegData_533.js></script>
 
 <script>
 
