--- a/covid19state.html
+++ b/covid19state.html
@@ -508,6 +508,7 @@
 <script src=USAData_530.js></script>
 <script src=USAData_531.js></script>
 <script src=USAData_532.js></script>
+<script src=USAData_533.js></script>
 
 <script>
 
