--- a/covid19int.html
+++ b/covid19int.html
@@ -566,6 +566,7 @@
 <script src=IntData_530.js></script>
 <script src=IntData_531.js></script>
 <script src=IntData_532.js></script>
+<script src=IntData_533.js></script>
 
 <script>
 
