--- a/covid19usa.html
+++ b/covid19usa.html
@@ -531,6 +531,7 @@
 <script src=USAData_530.js></script>
 <script src=USAData_531.js></script>
 <script src=USAData_532.js></script>
+<script src=USAData_533.js></script>
 
 <script>
 
