Updated data to 09/09/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -567,6 +567,7 @@
 <script src=IntData_531.js></script>
 <script src=IntData_532.js></script>
 <script src=IntData_533.js></script>
+<script src=IntData_534.js></script>
 
 <script>
 
