--- a/covid19reg.html
+++ b/covid19reg.html
@@ -567,6 +567,7 @@
 <script src=RegData_531.js></script>
 <script src=RegData_532.js></script>
 <script src=RegData_533.js></script>
+<script src=RegData_534.js></script>
 
 <script>
 
