--- a/covid19usa.html
+++ b/covid19usa.html
@@ -532,6 +532,7 @@
 <script src=USAData_531.js></script>
 <script src=USAData_532.js></script>
 <script src=USAData_533.js></script>
+<script src=USAData_534.js></script>
 
 <script>
 
