Updated data to 09/10/2021 + vaxdata

--- a/covid19state.html
+++ b/covid19state.html
@@ -510,6 +510,7 @@
 <script src=USAData_532.js></script>
 <script src=USAData_533.js></script>
 <script src=USAData_534.js></script>
+<script src=USAData_535.js></script>
 
 <script>
 
