--- a/covid19int.html
+++ b/covid19int.html
@@ -568,6 +568,7 @@
 <script src=IntData_532.js></script>
 <script src=IntData_533.js></script>
 <script src=IntData_534.js></script>
+<script src=IntData_535.js></script>
 
 <script>
 
