--- a/covid19reg.html
+++ b/covid19reg.html
@@ -568,6 +568,7 @@
 <script src=RegData_532.js></script>
 <script src=RegData_533.js></script>
 <script src=RegData_534.js></script>
+<script src=RegData_535.js></script>
 
 <script>
 
