Updated data to 09/11/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -569,6 +569,7 @@
 <script src=RegData_533.js></script>
 <script src=RegData_534.js></script>
 <script src=RegData_535.js></script>
+<script src=RegData_536.js></script>
 
 <script>
 
