--- a/covid19int.html
+++ b/covid19int.html
@@ -569,6 +569,7 @@
 <script src=IntData_533.js></script>
 <script src=IntData_534.js></script>
 <script src=IntData_535.js></script>
+<script src=IntData_536.js></script>
 
 <script>
 
