--- a/covid19state.html
+++ b/covid19state.html
@@ -511,6 +511,7 @@
 <script src=USAData_533.js></script>
 <script src=USAData_534.js></script>
 <script src=USAData_535.js></script>
+<script src=USAData_536.js></script>
 
 <script>
 
