--- a/covid19usa.html
+++ b/covid19usa.html
@@ -534,6 +534,7 @@
 <script src=USAData_533.js></script>
 <script src=USAData_534.js></script>
 <script src=USAData_535.js></script>
+<script src=USAData_536.js></script>
 
 <script>
 
