Updated data to 09/12/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -570,6 +570,7 @@
 <script src=IntData_534.js></script>
 <script src=IntData_535.js></script>
 <script src=IntData_536.js></script>
+<script src=IntData_537.js></script>
 
 <script>
 
