--- a/covid19reg.html
+++ b/covid19reg.html
@@ -570,6 +570,7 @@
 <script src=RegData_534.js></script>
 <script src=RegData_535.js></script>
 <script src=RegData_536.js></script>
+<script src=RegData_537.js></script>
 
 <script>
 
