--- a/covid19usa.html
+++ b/covid19usa.html
@@ -535,6 +535,7 @@
 <script src=USAData_534.js></script>
 <script src=USAData_535.js></script>
 <script src=USAData_536.js></script>
+<script src=USAData_537.js></script>
 
 <script>
 
