Updated data to 09/13/2021 + vaxdata

--- a/covid19state.html
+++ b/covid19state.html
@@ -513,6 +513,7 @@
 <script src=USAData_535.js></script>
 <script src=USAData_536.js></script>
 <script src=USAData_537.js></script>
+<script src=USAData_538.js></script>
 
 <script>
 
