--- a/covid19int.html
+++ b/covid19int.html
@@ -571,6 +571,7 @@
 <script src=IntData_535.js></script>
 <script src=IntData_536.js></script>
 <script src=IntData_537.js></script>
+<script src=IntData_538.js></script>
 
 <script>
 
