--- a/covid19reg.html
+++ b/covid19reg.html
@@ -571,6 +571,7 @@
 <script src=RegData_535.js></script>
 <script src=RegData_536.js></script>
 <script src=RegData_537.js></script>
+<script src=RegData_538.js></script>
 
 <script>
 
