Updated to 09/15/2021 + vaxdata (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -572,6 +572,8 @@
 <script src=IntData_536.js></script>
 <script src=IntData_537.js></script>
 <script src=IntData_538.js></script>
+<script src=IntData_539.js></script>
+<script src=IntData_540.js></script>
 
 <script>
 
