--- a/covid19reg.html
+++ b/covid19reg.html
@@ -572,6 +572,8 @@
 <script src=RegData_536.js></script>
 <script src=RegData_537.js></script>
 <script src=RegData_538.js></script>
+<script src=RegData_539.js></script>
+<script src=RegData_540.js></script>
 
 <script>
 
