--- a/covid19state.html
+++ b/covid19state.html
@@ -514,6 +514,8 @@
 <script src=USAData_536.js></script>
 <script src=USAData_537.js></script>
 <script src=USAData_538.js></script>
+<script src=USAData_539.js></script>
+<script src=USAData_540.js></script>
 
 <script>
 
