Updated data to 09/16/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -574,6 +574,7 @@
 <script src=IntData_538.js></script>
 <script src=IntData_539.js></script>
 <script src=IntData_540.js></script>
+<script src=IntData_541.js></script>
 
 <script>
 
