--- a/covid19reg.html
+++ b/covid19reg.html
@@ -574,6 +574,7 @@
 <script src=RegData_538.js></script>
 <script src=RegData_539.js></script>
 <script src=RegData_540.js></script>
+<script src=RegData_541.js></script>
 
 <script>
 
