--- a/covid19state.html
+++ b/covid19state.html
@@ -516,6 +516,7 @@
 <script src=USAData_538.js></script>
 <script src=USAData_539.js></script>
 <script src=USAData_540.js></script>
+<script src=USAData_541.js></script>
 
 <script>
 
