--- a/covid19usa.html
+++ b/covid19usa.html
@@ -539,6 +539,7 @@
 <script src=USAData_538.js></script>
 <script src=USAData_539.js></script>
 <script src=USAData_540.js></script>
+<script src=USAData_541.js></script>
 
 <script>
 
