Updated data to 09/17/2021 + vaxdata

--- a/covid19int.html
+++ b/covid19int.html
@@ -575,6 +575,7 @@
 <script src=IntData_539.js></script>
 <script src=IntData_540.js></script>
 <script src=IntData_541.js></script>
+<script src=IntData_542.js></script>
 
 <script>
 
