--- a/covid19usa.html
+++ b/covid19usa.html
@@ -540,6 +540,7 @@
 <script src=USAData_539.js></script>
 <script src=USAData_540.js></script>
 <script src=USAData_541.js></script>
+<script src=USAData_542.js></script>
 
 <script>
 
