--- a/covid19reg.html
+++ b/covid19reg.html
@@ -575,6 +575,7 @@
 <script src=RegData_539.js></script>
 <script src=RegData_540.js></script>
 <script src=RegData_541.js></script>
+<script src=RegData_542.js></script>
 
 <script>
 
