--- a/covid19state.html
+++ b/covid19state.html
@@ -517,6 +517,7 @@
 <script src=USAData_539.js></script>
 <script src=USAData_540.js></script>
 <script src=USAData_541.js></script>
+<script src=USAData_542.js></script>
 
 <script>
 
