Updated to 09/18/2021 + vaxdata

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -576,6 +576,7 @@
 <script src=RegData_540.js></script>
 <script src=RegData_541.js></script>
 <script src=RegData_542.js></script>
+<script src=RegData_543.js></script>
 
 <script>
 
