--- a/covid19int.html
+++ b/covid19int.html
@@ -576,6 +576,7 @@
 <script src=IntData_540.js></script>
 <script src=IntData_541.js></script>
 <script src=IntData_542.js></script>
+<script src=IntData_543.js></script>
 
 <script>
 
