--- a/covid19state.html
+++ b/covid19state.html
@@ -518,6 +518,7 @@
 <script src=USAData_540.js></script>
 <script src=USAData_541.js></script>
 <script src=USAData_542.js></script>
+<script src=USAData_543.js></script>
 
 <script>
 
