Updated data to 09/20/2021 + vaxdata (two days)

--- a/covid19state.html
+++ b/covid19state.html
@@ -519,6 +519,8 @@
 <script src=USAData_541.js></script>
 <script src=USAData_542.js></script>
 <script src=USAData_543.js></script>
+<script src=USAData_544.js></script>
+<script src=USAData_545.js></script>
 
 <script>
 
