--- a/covid19int.html
+++ b/covid19int.html
@@ -577,6 +577,8 @@
 <script src=IntData_541.js></script>
 <script src=IntData_542.js></script>
 <script src=IntData_543.js></script>
+<script src=IntData_544.js></script>
+<script src=IntData_545.js></script>
 
 <script>
 
