--- a/covid19reg.html
+++ b/covid19reg.html
@@ -577,6 +577,8 @@
 <script src=RegData_541.js></script>
 <script src=RegData_542.js></script>
 <script src=RegData_543.js></script>
+<script src=RegData_544.js></script>
+<script src=RegData_545.js></script>
 
 <script>
 
