Updated data to 09/22/2021 + vaxdata (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -579,6 +579,8 @@
 <script src=IntData_543.js></script>
 <script src=IntData_544.js></script>
 <script src=IntData_545.js></script>
+<script src=IntData_546.js></script>
+<script src=IntData_547.js></script>
 
 <script>
 
