--- a/covid19state.html
+++ b/covid19state.html
@@ -521,6 +521,8 @@
 <script src=USAData_543.js></script>
 <script src=USAData_544.js></script>
 <script src=USAData_545.js></script>
+<script src=USAData_546.js></script>
+<script src=USAData_547.js></script>
 
 <script>
 
