--- a/covid19reg.html
+++ b/covid19reg.html
@@ -579,6 +579,8 @@
 <script src=RegData_543.js></script>
 <script src=RegData_544.js></script>
 <script src=RegData_545.js></script>
+<script src=RegData_546.js></script>
+<script src=RegData_547.js></script>
 
 <script>
 
