--- a/covid19usa.html
+++ b/covid19usa.html
@@ -544,6 +544,8 @@
 <script src=USAData_543.js></script>
 <script src=USAData_544.js></script>
 <script src=USAData_545.js></script>
+<script src=USAData_546.js></script>
+<script src=USAData_547.js></script>
 
 <script>
 
