Updated data to 09/23/2021 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -581,6 +581,7 @@
 <script src=RegData_545.js></script>
 <script src=RegData_546.js></script>
 <script src=RegData_547.js></script>
+<script src=RegData_548.js></script>
 
 <script>
 
