--- a/covid19state.html
+++ b/covid19state.html
@@ -523,6 +523,7 @@
 <script src=USAData_545.js></script>
 <script src=USAData_546.js></script>
 <script src=USAData_547.js></script>
+<script src=USAData_548.js></script>
 
 <script>
 
