--- a/covid19int.html
+++ b/covid19int.html
@@ -581,6 +581,7 @@
 <script src=IntData_545.js></script>
 <script src=IntData_546.js></script>
 <script src=IntData_547.js></script>
+<script src=IntData_548.js></script>
 
 <script>
 
