--- a/covid19reg.html
+++ b/covid19reg.html
@@ -582,6 +582,8 @@
 <script src=RegData_546.js></script>
 <script src=RegData_547.js></script>
 <script src=RegData_548.js></script>
+<script src=RegData_549.js></script>
+<script src=RegData_550.js></script>
 
 <script>
 
