--- a/covid19reg.html
+++ b/covid19reg.html
@@ -584,6 +584,9 @@
 <script src=RegData_548.js></script>
 <script src=RegData_549.js></script>
 <script src=RegData_550.js></script>
+<script src=RegData_551.js></script>
+<script src=RegData_552.js></script>
+<script src=RegData_553.js></script>
 
 <script>
 
