--- a/covid19state.html
+++ b/covid19state.html
@@ -526,6 +526,9 @@
 <script src=USAData_548.js></script>
 <script src=USAData_549.js></script>
 <script src=USAData_550.js></script>
+<script src=USAData_551.js></script>
+<script src=USAData_552.js></script>
+<script src=USAData_553.js></script>
 
 <script>
 
