Updated data to 10/15/2021 + vaxdata (13 days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -591,6 +591,19 @@
 <script src=IntData_555.js></script>
 <script src=IntData_556.js></script>
 <script src=IntData_557.js></script>
+<script src=IntData_558.js></script>
+<script src=IntData_559.js></script>
+<script src=IntData_560.js></script>
+<script src=IntData_561.js></script>
+<script src=IntData_562.js></script>
+<script src=IntData_563.js></script>
+<script src=IntData_564.js></script>
+<script src=IntData_565.js></script>
+<script src=IntData_566.js></script>
+<script src=IntData_567.js></script>
+<script src=IntData_568.js></script>
+<script src=IntData_569.js></script>
+<script src=IntData_570.js></script>
 
 <script>
 
