--- a/covid19reg.html
+++ b/covid19reg.html
@@ -591,6 +591,19 @@
 <script src=RegData_555.js></script>
 <script src=RegData_556.js></script>
 <script src=RegData_557.js></script>
+<script src=RegData_558.js></script>
+<script src=RegData_559.js></script>
+<script src=RegData_560.js></script>
+<script src=RegData_561.js></script>
+<script src=RegData_562.js></script>
+<script src=RegData_563.js></script>
+<script src=RegData_564.js></script>
+<script src=RegData_565.js></script>
+<script src=RegData_566.js></script>
+<script src=RegData_567.js></script>
+<script src=RegData_568.js></script>
+<script src=RegData_569.js></script>
+<script src=RegData_570.js></script>
 
 <script>
 
