--- a/covid19state.html
+++ b/covid19state.html
@@ -533,6 +533,19 @@
 <script src=USAData_555.js></script>
 <script src=USAData_556.js></script>
 <script src=USAData_557.js></script>
+<script src=USAData_558.js></script>
+<script src=USAData_559.js></script>
+<script src=USAData_560.js></script>
+<script src=USAData_561.js></script>
+<script src=USAData_562.js></script>
+<script src=USAData_563.js></script>
+<script src=USAData_564.js></script>
+<script src=USAData_565.js></script>
+<script src=USAData_566.js></script>
+<script src=USAData_567.js></script>
+<script src=USAData_568.js></script>
+<script src=USAData_569.js></script>
+<script src=USAData_570.js></script>
 
 <script>
 
