Updated data to 10/17/2021 + vaxdata (two days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -604,6 +604,8 @@
 <script src=IntData_568.js></script>
 <script src=IntData_569.js></script>
 <script src=IntData_570.js></script>
+<script src=IntData_571.js></script>
+<script src=IntData_572.js></script>
 
 <script>
 
