--- a/covid19reg.html
+++ b/covid19reg.html
@@ -604,6 +604,8 @@
 <script src=RegData_568.js></script>
 <script src=RegData_569.js></script>
 <script src=RegData_570.js></script>
+<script src=RegData_571.js></script>
+<script src=RegData_572.js></script>
 
 <script>
 
