--- a/covid19state.html
+++ b/covid19state.html
@@ -546,6 +546,8 @@
 <script src=USAData_568.js></script>
 <script src=USAData_569.js></script>
 <script src=USAData_570.js></script>
+<script src=USAData_571.js></script>
+<script src=USAData_572.js></script>
 
 <script>
 
