Updated data to 10/21/2021 + vaxdata (four days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -606,6 +606,10 @@
 <script src=IntData_570.js></script>
 <script src=IntData_571.js></script>
 <script src=IntData_572.js></script>
+<script src=IntData_573.js></script>
+<script src=IntData_574.js></script>
+<script src=IntData_575.js></script>
+<script src=IntData_576.js></script>
 
 <script>
 
