--- a/covid19reg.html
+++ b/covid19reg.html
@@ -606,6 +606,10 @@
 <script src=RegData_570.js></script>
 <script src=RegData_571.js></script>
 <script src=RegData_572.js></script>
+<script src=RegData_573.js></script>
+<script src=RegData_574.js></script>
+<script src=RegData_575.js></script>
+<script src=RegData_576.js></script>
 
 <script>
 
