--- a/covid19usa.html
+++ b/covid19usa.html
@@ -571,6 +571,10 @@
 <script src=USAData_570.js></script>
 <script src=USAData_571.js></script>
 <script src=USAData_572.js></script>
+<script src=USAData_573.js></script>
+<script src=USAData_574.js></script>
+<script src=USAData_575.js></script>
+<script src=USAData_576.js></script>
 
 <script>
 
