Updated data to 10/29/2021 + vaxdata (seven days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -610,6 +610,13 @@
 <script src=IntData_574.js></script>
 <script src=IntData_575.js></script>
 <script src=IntData_576.js></script>
+<script src=IntData_577.js></script>
+<script src=IntData_578.js></script>
+<script src=IntData_579.js></script>
+<script src=IntData_580.js></script>
+<script src=IntData_581.js></script>
+<script src=IntData_582.js></script>
+<script src=IntData_583.js></script>
 
 <script>
 
