--- a/covid19reg.html
+++ b/covid19reg.html
@@ -610,6 +610,13 @@
 <script src=RegData_574.js></script>
 <script src=RegData_575.js></script>
 <script src=RegData_576.js></script>
+<script src=RegData_577.js></script>
+<script src=RegData_578.js></script>
+<script src=RegData_579.js></script>
+<script src=RegData_580.js></script>
+<script src=RegData_581.js></script>
+<script src=RegData_582.js></script>
+<script src=RegData_583.js></script>
 
 <script>
 
