--- a/covid19state.html
+++ b/covid19state.html
@@ -552,6 +552,13 @@
 <script src=USAData_574.js></script>
 <script src=USAData_575.js></script>
 <script src=USAData_576.js></script>
+<script src=USAData_577.js></script>
+<script src=USAData_578.js></script>
+<script src=USAData_579.js></script>
+<script src=USAData_580.js></script>
+<script src=USAData_581.js></script>
+<script src=USAData_582.js></script>
+<script src=USAData_583.js></script>
 
 <script>
 
