Updated data to 11/05/2021 + vax data (8 days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -617,6 +617,14 @@
 <script src=IntData_581.js></script>
 <script src=IntData_582.js></script>
 <script src=IntData_583.js></script>
+<script src=IntData_584.js></script>
+<script src=IntData_585.js></script>
+<script src=IntData_586.js></script>
+<script src=IntData_587.js></script>
+<script src=IntData_588.js></script>
+<script src=IntData_589.js></script>
+<script src=IntData_590.js></script>
+<script src=IntData_591.js></script>
 
 <script>
 
