--- a/covid19reg.html
+++ b/covid19reg.html
@@ -617,6 +617,14 @@
 <script src=RegData_581.js></script>
 <script src=RegData_582.js></script>
 <script src=RegData_583.js></script>
+<script src=RegData_584.js></script>
+<script src=RegData_585.js></script>
+<script src=RegData_586.js></script>
+<script src=RegData_587.js></script>
+<script src=RegData_588.js></script>
+<script src=RegData_589.js></script>
+<script src=RegData_590.js></script>
+<script src=RegData_591.js></script>
 
 <script>
 
