--- a/covid19usa.html
+++ b/covid19usa.html
@@ -582,6 +582,14 @@
 <script src=USAData_581.js></script>
 <script src=USAData_582.js></script>
 <script src=USAData_583.js></script>
+<script src=USAData_584.js></script>
+<script src=USAData_585.js></script>
+<script src=USAData_586.js></script>
+<script src=USAData_587.js></script>
+<script src=USAData_588.js></script>
+<script src=USAData_589.js></script>
+<script src=USAData_590.js></script>
+<script src=USAData_591.js></script>
 
 <script>
 
