Updated data to 11/12/2021 + vax data (7 days)

--- a/covid19int.html
+++ b/covid19int.html
@@ -625,6 +625,13 @@
 <script src=IntData_589.js></script>
 <script src=IntData_590.js></script>
 <script src=IntData_591.js></script>
+<script src=IntData_592.js></script>
+<script src=IntData_593.js></script>
+<script src=IntData_594.js></script>
+<script src=IntData_595.js></script>
+<script src=IntData_596.js></script>
+<script src=IntData_597.js></script>
+<script src=IntData_598.js></script>
 
 <script>
 
