--- a/covid19reg.html
+++ b/covid19reg.html
@@ -625,6 +625,13 @@
 <script src=RegData_589.js></script>
 <script src=RegData_590.js></script>
 <script src=RegData_591.js></script>
+<script src=RegData_592.js></script>
+<script src=RegData_593.js></script>
+<script src=RegData_594.js></script>
+<script src=RegData_595.js></script>
+<script src=RegData_596.js></script>
+<script src=RegData_597.js></script>
+<script src=RegData_598.js></script>
 
 <script>
 
