--- a/covid19usa.html
+++ b/covid19usa.html
@@ -590,6 +590,13 @@
 <script src=USAData_589.js></script>
 <script src=USAData_590.js></script>
 <script src=USAData_591.js></script>
+<script src=USAData_592.js></script>
+<script src=USAData_593.js></script>
+<script src=USAData_594.js></script>
+<script src=USAData_595.js></script>
+<script src=USAData_596.js></script>
+<script src=USAData_597.js></script>
+<script src=USAData_598.js></script>
 
 <script>
 
